
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int SIGCHLD ;
 int SIG_IGN ;
 int close (int) ;
 int dup2 (int,int) ;
 int exit (int ) ;
 scalar_t__ fork () ;
 int handler ;
 int open (char*,int ) ;
 int setsid () ;
 int signal (int,int ) ;

void go_daemon() {
int i;
if(fork())
exit (0);
setsid();
i=open("/dev/null",O_RDWR);
dup2(i, 0);
dup2(i, 1);
dup2(i, 2);
close(i);
for (i=1;i<64;i++)
signal(i,SIG_IGN);
signal(SIGCHLD,handler);
}
