; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_152.c_go_daemon.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_152.c_go_daemon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/dev/null\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@SIGCHLD = common dso_local global i32 0, align 4
@handler = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @go_daemon() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @fork()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @exit(i32 0) #3
  unreachable

6:                                                ; preds = %0
  %7 = call i32 (...) @setsid()
  %8 = load i32, i32* @O_RDWR, align 4
  %9 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %8)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @dup2(i32 %10, i32 0)
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @dup2(i32 %12, i32 1)
  %14 = load i32, i32* %1, align 4
  %15 = call i32 @dup2(i32 %14, i32 2)
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @close(i32 %16)
  store i32 1, i32* %1, align 4
  br label %18

18:                                               ; preds = %25, %6
  %19 = load i32, i32* %1, align 4
  %20 = icmp slt i32 %19, 64
  br i1 %20, label %21, label %28

21:                                               ; preds = %18
  %22 = load i32, i32* %1, align 4
  %23 = load i32, i32* @SIG_IGN, align 4
  %24 = call i32 @signal(i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %21
  %26 = load i32, i32* %1, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %1, align 4
  br label %18

28:                                               ; preds = %18
  %29 = load i32, i32* @SIGCHLD, align 4
  %30 = load i32, i32* @handler, align 4
  %31 = call i32 @signal(i32 %29, i32 %30)
  ret void
}

declare dso_local i64 @fork(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @dup2(i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
